updated alt on photos

--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-
 	<!-- Font awesome -->
 	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
@@ -57,13 +54,9 @@
 	</nav>
 	<!-- end of nav -->
 
-	
-
-
 	<div class="full-width-image-1">
 		<h1 class="text-center"><small>welcome to</small> <br> Joe's music haven</h1>
 	</div>
-
 
 	<!-- Guitars -->
 	<section id="guitars">
@@ -71,7 +64,7 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="images/guitar-1.jpeg" alt="photo of guitar">
+					<img src="images/guitar-1.jpeg" alt="guitar">
 					<div class="caption">
 						<h3 class="text-center">This guitar</h3> 
 						<h4 class="text-center">$999</h4>
@@ -85,7 +78,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="images/guitar-2.jpeg" alt="photo of guitar">
+					<img src="images/guitar-2.jpeg" alt="guitar">
 					<div class="caption">
 						<h3 class="text-center">That guitar</h3>
 						<h4 class="text-center">$1499</h4>
@@ -98,7 +91,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="images/guitar-3.jpeg" alt="photo of guitar">
+					<img src="images/guitar-3.jpeg" alt="guitar">
 					<div class="caption">
 						<h3 class="text-center">The other guitar</h3>
 						<h4 class="text-center">$1999</h4>
@@ -112,14 +105,13 @@
 		</div>
 	</section>
 
-
 	<!-- Pianos -->
 	<section id="pianos">
 		<h2 class="text-center">Pianos</h2>
 		<div class="row">
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="images/piano-1.jpeg" alt="photo of piano">
+					<img src="images/piano-1.jpeg" alt="piano">
 					<div class="caption">
 						<h3 class="text-center">This piano</h3> 
 						<h4 class="text-center">$3999</h4>
@@ -132,7 +124,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="images/piano-2.jpeg" alt="photo of piano">
+					<img src="images/piano-2.jpeg" alt="piano">
 					<div class="caption">
 						<h3 class="text-center">That piano</h3>
 						<h4 class="text-center">$4999</h4>
@@ -145,7 +137,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="images/piano-3.jpeg" alt="photo of piano">
+					<img src="images/piano-3.jpeg" alt="piano">
 					<div class="caption">
 						<h3 class="text-center">The other piano</h3>
 						<h4 class="text-center">$5999</h4>
@@ -160,14 +152,13 @@
 	</div>
 </section>
 
-
 <!-- Violins -->
 <section id="violins">
 	<h2 class="text-center">Violins</h2>
 	<div class="row">
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="images/violin-1.jpeg" alt="photo of violin">
+				<img src="images/violin-1.jpeg" alt="violin">
 				<div class="caption">
 					<h3 class="text-center">This violin</h3> 
 					<h4 class="text-center">$1899</h4>
@@ -181,7 +172,7 @@
 		</div>
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="images/violin-2.jpeg" alt="photo of violin">
+				<img src="images/violin-2.jpeg" alt="violin">
 				<div class="caption">
 					<h3 class="text-center">That violin</h3>
 					<h4 class="text-center">$2399</h4>
@@ -194,7 +185,7 @@
 		</div>
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="images/violin-3.jpeg" alt="photo of violin">
+				<img src="images/violin-3.jpeg" alt="violin">
 				<div class="caption">
 					<h3 class="text-center">The other violin</h3>
 					<h4 class="text-center">$2999</h4>
@@ -215,7 +206,7 @@
 	<div class="row">
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="images/recordplayer-1.jpeg" alt="photo of record player">
+				<img src="images/recordplayer-1.jpeg" alt="record player">
 				<div class="caption">
 					<h3 class="text-center">This record player</h3> 
 					<h4 class="text-center">$1899</h4>
@@ -229,7 +220,7 @@
 		</div>
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="images/recordplayer-2.jpg" alt="photo of record player">
+				<img src="images/recordplayer-2.jpg" alt="record player">
 				<div class="caption">
 					<h3 class="text-center">That record player</h3>
 					<h4 class="text-center">$2399</h4>
@@ -242,7 +233,7 @@
 		</div>
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="images/recordplayer-3.jpeg" alt="photo of record player">
+				<img src="images/recordplayer-3.jpeg" alt="record player">
 				<div class="caption">
 					<h3 class="text-center">The other record player</h3>
 					<h4 class="text-center">$2999</h4>
@@ -262,9 +253,9 @@
 	<h2 class="text-center">Records</h2>
 	<div class="row">
 		<div class="col-sm-12 text-center">
-			<img src="images/records-1.jpeg" class="records-img" alt="photo of vinyl records">
-			<img src="images/records-2.jpeg" class="records-img" alt="photo of vinyl records">
-			<img src="images/records-3.jpeg" class="records-img" alt="photo of vinyl records">
+			<img src="images/records-1.jpeg" class="records-img" alt="vinyl records">
+			<img src="images/records-2.jpeg" class="records-img" alt="vinyl records">
+			<img src="images/records-3.jpeg" class="records-img" alt="vinyl records">
 			<h4 class="text-center">In addition, we have a huge collection of records for you.</h4>
 		</div>
 	</div>
